<resources>
    <string name="app_name">Jubayer_Portfolio</string>
    <string name="welcome_to_my_portfolio">Welcome to my portfolio!</string>
    <string name="show_my_details_here">Show my Details here</string>
    <string name="explore_all_about_me_also_my_education_etc">Explore all about me, also my education, etc.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="intro_image">Intro Image</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_back_you_have_been_missed">Welcome back you’ve \n been missed!</string>
    <string name="enter_your_email_address_here">Enter your Email Address here</string>
    <string name="enter_your_correct_password_here">Enter your Correct Password here</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_continue_with">Or\nContinue with</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register_here">Register Here</string>
    <string name="create_an_account_so_you_can_explore_all_about_me">Create an account so you can explore all about me!</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="enter_your_confirm_password_here">Enter your confirm password here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="design_by_jubayer_ahamad_tayef">Design by \n Jubayer Ahamad Tayef</string>
    <string name="assalamualaikum_i_am_jubayer_ahamad_tayef">Assalamualaikum,🫡.\n I am Jubayer Ahamad Tayef. \nI\'m a Android Developer!</string>
    <string name="my_information_details">I am using XML for designing my app and I am using Kotlin for define what action is perform when using my app. I am make app only for Android. My app performance best, because It\'s native app. You need any Native app for android? Contact me. My contact information is down contact section.</string>
    <string name="download_resume">Download Resume</string>
    <string name="starting_page">Starting Page</string>
    <string name="login_page">Login Page</string>
    <string name="register_page">Register Page</string>
    <string name="portfolio_page">Portfolio Page</string>
</resources>